2011-07-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc int] Portability fix: Avoid ‘string-append’ on symbols.

	* doc/mkinc (fln): Delete proc; import ‘write-line’ as alias, instead.
	(pp-ls): Convert the blurb to a string before passing to ‘fln’.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.40 (tag v0.40)

	* configure.ac (AC_INIT): Bump version to "0.40" for release.

2011-06-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use Guile-BAUX to compute ‘GUILE_LIBSITE’.

	* autogen.sh: Import Guile-BAUX module ‘re-prefixed-site-dirs’.
	* configure.ac (GUILE_LIBSITE_DIR): Delete macro call.
	(pg_cv_minstroot): New var, via ‘AC_CACHE_CHECK’.
	(GUILE_LIBSITE): New AC_SUBST.

2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use <postgresql/foo> for checking decls.

	Omission from 2011-06-02, "Prefer libpq headers
	in $(includedir)/postgresql, if available".

	* configure.ac (pg_encoding_to_char, pg_char_to_encoding):
	In this AC_CHECK_DECLS, use <postgresql/libpq-fe.h> if available.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Prefer libpq headers in $(includedir)/postgresql, if available.

	* configure.ac (AC_CHECK_HEADERS_ONCE): New macro call
	for <postgresql/libpq-fe.h> and <postgresql/libpq/libpq-fs.h>;
	if found and not overriden by env vars ‘PQ_CPPFLAGS’ and
	‘PQ_LDFLAGS’, check for libpq.a as well, and set those vars.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Decruft: Don't check some standard headers twice.

	* configure.ac (AC_CHECK_HEADERS): Don't explicitly
	check for string.h, stdio.h, stdlib.h, malloc.h, unistd.h.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build boot] Add sofix files to repo.

	* build-aux/sofix: New file.
	* build-aux/sofix.m4: New file.
	* build-aux/uninstall-sofixed: New file.
	* autogen.sh: Don't symlink sofix files from ../.common.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme] Use ‘cons*’, not ‘list*’.
